# try_astral_typecheck

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.alembic  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
app/: main.py
app/core/: config.py  database.py
app/plants/: application.py  domain.py  infrastructure.py  routes.py
migrations/: env.py
tests/: conftest.py  test_plants.py
